--- a/client/package.json
+++ b/client/package.json
@@ -47,9 +47,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prod": "node build.js",
+    "build:analyze": "vite build --mode analyze",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "clean": "rm -rf dist node_modules/.vite",
+    "test:build": "npm run build && npm run preview"
   },
   "browserslist": {
     "production": [
