--- a/netlify.toml
+++ b/netlify.toml
@@ -9,7 +9,13 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "https://your-backend-url.herokuapp.com/api/:splat"
+  to = "https://freelancehub-server.vercel.app/api/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/socket.io/*"
+  to = "https://freelancehub-server.vercel.app/socket.io/:splat"
   status = 200
   force = true
 
